Implemented SetUp Game in GUI